@@ -57,7 +57,7 @@ KEYWORDS = "unittest testing tests".split(' ')
 # Both install and setup requires - because we read VERSION from within the
 # package, and the package also exports all the APIs.
 # six for compat helpers
-REQUIRES = ['argparse', 'six'],
+REQUIRES = ['argparse', 'six', 'traceback2'],
 
 params = dict(
     name=NAME,
