@@ -1,3 +1,6 @@
+- Issue #22936: Make it possible to show local variables in tracebacks for
+  both the traceback module and unittest.
+
 - Issue #22894: TestCase.subTest() would cause the test suite to be stopped
   when in failfast mode, even in the absence of failures.
 
